integration-kustomized/integration/apps/ingresses/gatekeeper-policy-manager.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatekeeper-policy-manager-ingress
  namespace: gatekeeper-system
spec:
  ingressClassName: nginx
  rules:
  - host: gpm.integration
    http:
      paths:
      - backend:
          service:
            name: gatekeeper-policy-manager
            port:
              number: 80
        path: /
        pathType: Prefix
